--- a/sass/utils/_maps.scss
+++ b/sass/utils/_maps.scss
@@ -30,7 +30,6 @@ $txt-weight: (
 );
 
 $breakpoints: (
-    small-screen:360px,
     tabs:640px,
     desktop:1224px,
     desktop-xl:2000px,
